Replace hardcoded 2024 references with {{ site.conf_year }}
Templatize year references across all HTML pages so they
automatically use the conf_year from site.json. Also update
Slack URLs and replace Durham-specific date references with
generic placeholders.

--- a/src/_content/styleguide/logo-files.html
+++ b/src/_content/styleguide/logo-files.html
@@ -6,9 +6,9 @@ order: 0
 description: |
   Logos are stored on GitHub in the [resources repository](https://github.com/djangocon/resources).
 
-fullLogoFolder: https://raw.githubusercontent.com/djangocon/resources/main/us-2024/logos/full-logo/
+fullLogoFolder: https://raw.githubusercontent.com/djangocon/resources/main/us-{{ site.conf_year }}/logos/full-logo/
 
-subMarkFolder: https://raw.githubusercontent.com/djangocon/resources/main/us-2024/logos/submark/
+subMarkFolder: https://raw.githubusercontent.com/djangocon/resources/main/us-{{ site.conf_year }}/logos/submark/
 
 logos:
   - black.png
