--- a/src/about/faq.html
+++ b/src/about/faq.html
@@ -38,7 +38,7 @@ permalink: /faq/
           <h2 class="mb-4 text-xl font-bold font-heading lg:text-3xl">Tickets</h2>
           <p class="lead">
             Tickets are on sale now! More information is on our <a href="/tickets" class="link">Tickets</a> page.
-            {% comment %}Conference tickets are sold out for 2024, but tutorial tickets may still be available.{% endcomment %}
+            {% comment %}Conference tickets are sold out for {{ site.conf_year }}, but tutorial tickets may still be available.{% endcomment %}
           </p>
         </hgroup>
 
@@ -140,12 +140,12 @@ permalink: /faq/
       <section>
         <hgroup class="mb-6">
           <h2 class="mb-8 text-2xl font-bold font-heading lg:text-4xl">Sponsors</h2>
-          <p class="lead">More information is on our <a href="/sponsors/information/" class="link">Become a Sponsor</a> page. Sponsorship signups for 2024 are now available!</p>
+          <p class="lead">More information is on our <a href="/sponsors/information/" class="link">Become a Sponsor</a> page. Sponsorship signups for {{ site.conf_year }} are now available!</p>
         </hgroup>
 
         <div class="prose lg:prose-lg">
 {% markdown %}
-- Can I sign up as a sponsor for DjangoCon US 2024?
+- Can I sign up as a sponsor for DjangoCon US {{ site.conf_year }}?
 - Can I sign up as a sponsor for [Opportunity Grants](/opportunity-grants/)?
 <!-- - Are any of the sponsors [hiring](/job-board/)? -->
 {% endmarkdown %}
