--- a/src/about/hackathon.html
+++ b/src/about/hackathon.html
@@ -16,7 +16,7 @@ permalink: /hackathon/
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-12 pageheading">{{ title }}</h1>
         <p class="subheading">
-          Welcome to DjangoCon US 2024 Hackathon!
+          Welcome to DjangoCon US {{ site.conf_year }} Hackathon!
         </p>
       </div>
     </header>
@@ -44,14 +44,11 @@ Join us for a day of coding, learning, and fun. Let's build something extraordin
 {% markdown %}
 ## What to expect:
 
--   **Registration:** Registration will be available starting August 20, 2024
--   **Announcement of hackathon participants:** All accepted hackathon participants will receive their acceptance emails by September 3rd, 2024
--   **Slack group:** All accepted hackathon participants will be added to the hackathon Slack channel in the DjangoCon US Attendee Slack workspace for easier communication
--   **Hackathon launch:** The hackathon will officially begin on September 19th, 2024 and will continue until September 26th, 2024
+-   **Registration:** Registration details coming soon
 -   **Individual or Group Projects:** Work solo or team up to create something amazing
 -   **Expert Mentors:** Our fantastic mentors will be there to guide you every step of the way
 -   **Networking Opportunities:** Connect with fellow developers and expand your professional network
--   **Presentation:** Each team or individual will have the opportunity to showcase their project to both the participants and judges and get feedback. This will take place on the last day of the hackathon, September 26th, 2024
+-   **Presentation:** Each team or individual will have the opportunity to showcase their project to both the participants and judges and get feedback
 -   **Swag:** There will be swag for each participant
 {% endmarkdown %}
       </section>
