--- a/src/about/index.html
+++ b/src/about/index.html
@@ -125,7 +125,7 @@ description: |
       <section class="relative flex flex-col gap-4 p-6 bg-white bg-lines lg:pt-10 card-effect-2">
         <img src="/assets/img/theme/icons/Heart.svg" alt="A heart." class="w-16 h-16 icon" />
         <h3 class="text-lg font-bold lg:text-2xl font-heading" id="commitment-to-diversity">Commitment to Diversity</h3>
-        <p class="lg:text-lg">It is a core aim of DjangoCon US 2024 to encourage diversity, enforce our <strong><a href=/conduct/" class="link">Code of Conduct</a></strong>, and make our event as inclusive and accessible as possible.</p>
+        <p class="lg:text-lg">It is a core aim of DjangoCon US {{ site.conf_year }} to encourage diversity, enforce our <strong><a href=/conduct/" class="link">Code of Conduct</a></strong>, and make our event as inclusive and accessible as possible.</p>
       </section>
 
       <section class="relative flex flex-col gap-4 p-6 bg-white lg:pt-10 card-effect-3">
