--- a/src/about/tickets.html
+++ b/src/about/tickets.html
@@ -19,10 +19,10 @@ permalink: /tickets/
         class="hidden w-full max-w-80 md:block" />
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">{{ title }}</h1>
-        <p class="subheading">DjangoCon US 2024 tickets are available at early bird prices through May 31!</p>
+        <p class="subheading">DjangoCon US {{ site.conf_year }} ticket information coming soon!</p>
         {% comment %}
         <p class="subheading">
-          DjangoCon US 2024 tickets are no longer on sale, but if you want to see what they cost, or need to consult the refund policy, keep reading!
+          DjangoCon US {{ site.conf_year }} tickets are no longer on sale, but if you want to see what they cost, or need to consult the refund policy, keep reading!
         </p>
         {% endcomment %}
       </div>
@@ -154,11 +154,8 @@ If you have an in person ticket and find that you can't attend, please ask about
 
 Otherwise for cancelling in-person or online main tickets:
 
--   Refunds requested before September 1, 2024, incur a 10% cancellation fee.
--   Refunds requested between September 2 and September 9, 2024, incur a 25% cancellation fee.
--   Refunds requested between September 10 and September 21, 2024, incur a 50% cancellation fee.
--   Requests received after September 21, 2024 at 5:00 pm PDT are not eligible for a refund.
--   Tickets may be transferred to someone else at no charge by September 20 for tutorials and September 21 for the conference.
+-   Refund policy details will be updated for {{ site.conf_year }}.
+-   Tickets may be transferred to someone else at no charge. Details coming soon.
 {% endmarkdown %}
       </section>
 
@@ -171,7 +168,7 @@ In-person tickets can be converted to online tickets at ANY TIME. For that refun
 
 For all dates the cutoff is on or before 5:00 PM PDT per the time stamp on DEFNA’s servers.
 
-**We hope to see you in Durham!**
+**We hope to see you at DjangoCon US {{ site.conf_year }}!**
 {% endmarkdown %}
         </section>
       </div>
