--- a/src/schedule.html
+++ b/src/schedule.html
@@ -2,7 +2,7 @@
 title: Full Conference Schedule
 layout: default
 description: |
-  The schedule for DjangoCon US 2024.
+  The schedule for DjangoCon US {{ site.conf_year }}.
 
 sitemap: false
 
