--- a/src/venue.html
+++ b/src/venue.html
@@ -2,7 +2,7 @@
 layout: default
 
 title: Welcome to Durham!
-description: DjangoCon US 2024 is being held at the Durham Convention Center in Durham, NC.
+description: DjangoCon US {{ site.conf_year }} venue information.
 
 other_lodging:
   - name: 21c Museum and Hotel
@@ -95,7 +95,7 @@ other_lodging:
       <section class="space-y-6 text-xl lg:text-2xl">
         <h2 class="mb-4 text-3xl font-bold font-heading lg:text-5xl">Staying at the Durham Marriott City Center</h2>
         <p>
-         The hotel room block is closed for 2024. Please check other lodging options below or attempt to
+         The hotel room block information will be updated. Please check other lodging options below or attempt to
          <a href="https://www.marriott.com/en-us/hotels/rducv-durham-marriott-city-center/overview/">book a room</a> at the normal retail rates.
         </p>
         <ul class="flex flex-wrap gap-2">
