--- a/src/about/opportunity-grants.html
+++ b/src/about/opportunity-grants.html
@@ -18,14 +18,14 @@ permalink: /opportunity-grants/
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">{{ title }}</h1>
 
-        <h2 class="mb-8 subheading">The application window is now closed. Decision notifications will be sent by July 8th, 2024.</h2>
+        <h2 class="mb-8 subheading">The application window for {{ site.conf_year }} will open soon.</h2>
 
 
         <div class="space-y-6">
           {% comment %}
             <p><strong>UPDATE</strong>: The application window has been extended to Monday, April 29th at Noon EDT!</p>
 
-            <p>Our <a href="https://forms.gle/Pi12J6vFQHq2CSAy5">opportunity grant application</a> is open until April 29, 2024 at <a href="https://time.is/1200PM_29_Apr_2024_in_New_York?DjangoCon_US_2024_CFP_closes">12 PM EDT</a>.
+            <p>Our opportunity grant application details will be announced for {{ site.conf_year }}.
             </p>
           {% endcomment %}
 
@@ -56,7 +56,7 @@ We renamed “financial aid” to “opportunity grants” to become a more incl
 
 ### When will I find out whether I’ve received an opportunity grant?
 
-You will be notified by June 14, 2024.
+Notification dates will be announced for {{ site.conf_year }}.
 
 ### Do I need to be a speaker, a first-time attendee, or a member of an underrepresented group to receive an opportunity grant?
 
