--- a/src/about/public-health.html
+++ b/src/about/public-health.html
@@ -3,7 +3,7 @@ layout: default
 
 title: Public Health Policy
 description: |
-  DjangoCon US 2024's public health policy includes required testing and a mask recommendation.
+  DjangoCon US {{ site.conf_year }}'s public health policy.
 
 permalink: /public-health/
 redirect_from: /covid/
@@ -19,7 +19,7 @@ redirect_from: /covid/
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">{{ title }}</h1>
         <p class="subheading">
-          DjangoCon US 2024's public health policy includes required testing and a mask recommendation.
+          DjangoCon US {{ site.conf_year }}'s public health policy.
         </p>
       </div>
     </header>
