--- a/src/speaking/index.html
+++ b/src/speaking/index.html
@@ -18,7 +18,7 @@ description: |
   <div class="wrapper">
     <div class="prose lg:prose-lg">
       {% markdown %}
-Our Call for Proposals is now closed. Decision notifications will be sent by July 8th, 2024.
+Our Call for Proposals details for {{ site.conf_year }} will be announced soon.
 
 ## Why Speak at DjangoCon US?
 
@@ -74,7 +74,7 @@ This year, we will be curating a deep dive day to focus on exploring Django and 
 
 We’re open to all kinds of ideas, especially ones we haven’t thought of! Technical tutorials tend to be more popular, but we welcome all topics! Tutorials can be targeted at any experience level, just be sure to indicate clearly what you expect your students to already know or have experience with in your proposal!
 
-Still unsure if you should submit? Not only will we cover your DjangoCon ticket, but _tutorials are compensated_! However, they do not include the price of your travel or lodging. If you need help with these costs, fill out the [opportunity grant](https://forms.gle/Pi12J6vFQHq2CSAy5) form by April 29, 2024. Decision notifications will be sent by June 14, 2024.
+Still unsure if you should submit? Not only will we cover your DjangoCon ticket, but _tutorials are compensated_! However, they do not include the price of your travel or lodging. If you need help with these costs, fill out the opportunity grant form when it becomes available.
 
 #### New Expectations for Tutorials
 
