--- a/src/speaking/speaker-resources.html
+++ b/src/speaking/speaker-resources.html
@@ -3,7 +3,7 @@ layout: default
 
 title: Speaker Resources
 description: |
-  Resources to support DjangoCon US 2024 speakers
+  Resources to support DjangoCon US {{ site.conf_year }} speakers
 ---
 
 <div class="block-container">
