--- a/src/sponsors/information.html
+++ b/src/sponsors/information.html
@@ -212,7 +212,7 @@ description: Become a Sponsor
       <div class="mt-8 prose lg:prose-lg">
         <h4 id="t-shirts-included-in-gold-tier-">T-Shirts! Included in Gold Tier +</h4>
 
-        <p>Sign your sponsorship contract and pay your invoice by July 15, 2024 to get your logo on our conference t-shirts for all sponsors Gold and up!*
+        <p>Sign your sponsorship contract early to get your logo on our conference t-shirts for all sponsors Gold and up!*
           <br />T-shirts are distributed at the conference for in-person attendees to wear at no cost to them. Online attendees will be able to purchase the t-shirt to have it delivered to them from a distributor. Logos will likely be screen printed with a single-color.</p>
 
         <h4 id="opening-party--10000-14000">Opening Party – $10,000-$14,000</h4>
@@ -243,7 +243,7 @@ description: Become a Sponsor
 
         <p>We’ve helped sponsors host luncheons, throw parties, and add opportunity grant sponsorship and other perks to existing packages.</p>
 
-        <p>Whether you’re joining us in Durham or supporting us from afar, please consider sponsoring DjangoCon US 2024.</p>
+        <p>Whether you’re joining us in person or supporting us from afar, please consider sponsoring DjangoCon US {{ site.conf_year }}.</p>
 
         <p>We can’t do it without you and hope to see you there!</p>
 
