--- a/src/venueless-help-page.html
+++ b/src/venueless-help-page.html
@@ -14,7 +14,7 @@ description: Find Help
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">{{ title }}</h1>
         <p class="subheading">
-          Need Help? This is the place! Or, visit our <a href="https://djangoconus2024.slack.com">Slack</a>.
+          Need Help? This is the place! Or, visit our <a href="https://djangocon.slack.com">Slack</a>.
         </p>
       </div>
     </header>
@@ -25,11 +25,11 @@ description: Find Help
     <div class="grid gap-4 lg:grid-cols-4">
         <div class="p-4 bg-gray-100">
           <span class="text-xl font-bold">General Venueless Questions?</span>
-          <p class="">Come Visit Our Help Desk in <a href="https://djangoconus2024.slack.com">Slack </a></p>
+          <p class="">Come Visit Our Help Desk in <a href="https://djangocon.slack.com">Slack </a></p>
         </div>
         <div class="p-4 bg-gray-200">
           <span class="text-xl font-bold">Technical Issues?</span>
-          <p>Come Visit Our Help Desk in <a href="https://djangoconus2024.slack.com">Slack </a></p>
+          <p>Come Visit Our Help Desk in <a href="https://djangocon.slack.com">Slack </a></p>
         </div>
         <div class="p-4 bg-gray-200">
           <span class="text-xl font-bold">Problems Accessing Slack?</span>
