--- a/src/venueless-welcome-page.html
+++ b/src/venueless-welcome-page.html
@@ -10,7 +10,7 @@ description: Online Welcome
     <div class="flex flex-col gap-8 lg:flex-row">
       <section class="self-center w-full pb-4 lg:flex-1">
         <h1 class="mb-4 text-4xl font-extrabold leading-tight lg:text-5xl">
-          Welcome to DjangoCon US 2024 Online
+          Welcome to DjangoCon US {{ site.conf_year }} Online
         </h1>
         <br>
         <!-- <p class="mb-4 text-2xl lg:text-3xl">
@@ -23,7 +23,7 @@ description: Online Welcome
             target="_blank"
             class="hover:text-blue reverse-link">Durham Convention Center<br/><strong>Durham, NC</strong></a> -->
             We are so happy to be hosting you online. We will be hosting discussions on
-            <a href="https://djangoconus2024.slack.com">Slack</a> and are looking forward to chatting with
+            <a href="https://djangocon.slack.com">Slack</a> and are looking forward to chatting with
             you there while watching the conference. <br /><br />We have two stages, Junior Ballroom and Grand Ballroom III where you can watch speakers
             while you ask questions in our Slack.
         </p>
@@ -50,7 +50,7 @@ description: Online Welcome
       <div>
         <ul class="space-y-10">
           <li>
-            <h2 class="mb-4 text-xl font-bold leading-relaxed font-heading lg:text-3xl"><a href="https://djangoconus2024.slack.com">Slack</a></h2>
+            <h2 class="mb-4 text-xl font-bold leading-relaxed font-heading lg:text-3xl"><a href="https://djangocon.slack.com">Slack</a></h2>
             <p>This is where we will be chatting. Come ask the speakers questions.
               Here you can also look at job opportunities, find the help desk, announcements updating speaker times, and hang out with us</p>
           </li>
