--- a/src/visa-invitation.html
+++ b/src/visa-invitation.html
@@ -2,7 +2,7 @@
 layout: default
 
 description: |
-  Request your visa invitation letter for DjangoCon US 2024 here.
+  Request your visa invitation letter for DjangoCon US {{ site.conf_year }} here.
 
 title: Visa Invitation Letter
 
@@ -64,7 +64,7 @@ permalink: /invitation/
     <div>
       <div id="loader" hidden></div>
       <p id="inProgressMsg" hidden class="max-w-2xl p-4 mx-auto text-lg bg-white border-4 rounded lg:p-12 text-medium lg:text-xl border-green">
-        Thank you for your interest in DjangoCon US 2024! We're generating your invitation letter.
+        Thank you for your interest in DjangoCon US! We're generating your invitation letter.
       </p>
       <p id="readyMsg" hidden class="max-w-2xl p-4 mx-auto text-lg bg-white border-4 rounded lg:p-12 text-medium lg:text-xl border-green">Your invitation letter has been sent to the DjangoCon US organizers for review. Once they approve it, they will email it to you. Thanks for your interest!</p>
     </div>
