--- a/opportunity-grants/index.html
+++ b/opportunity-grants/index.html
@@ -83,7 +83,7 @@
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">Opportunity Grants</h1>
 
-        <h2 class="mb-8 subheading">The application window is now closed. Decision notifications will be sent by July 8th, 2024.</h2>
+        <h2 class="mb-8 subheading">The application window for 2028 will open soon.</h2>
 
 
         <div class="space-y-6">
@@ -107,7 +107,7 @@
 <h3 id="why-did-the-name-change-to-%E2%80%9Copportunity-grants%E2%80%9D%3F" tabindex="-1">Why did the name change to “opportunity grants”?</h3>
 <p>We renamed “financial aid” to “opportunity grants” to become a more inclusive and diverse conference. We feel the wording “opportunity grants” makes a positive shift towards being a thriving, supportive and trusting community.</p>
 <h3 id="when-will-i-find-out-whether-i%E2%80%99ve-received-an-opportunity-grant%3F" tabindex="-1">When will I find out whether I’ve received an opportunity grant?</h3>
-<p>You will be notified by June 14, 2024.</p>
+<p>Notification dates will be announced for 2028.</p>
 <h3 id="do-i-need-to-be-a-speaker%2C-a-first-time-attendee%2C-or-a-member-of-an-underrepresented-group-to-receive-an-opportunity-grant%3F" tabindex="-1">Do I need to be a speaker, a first-time attendee, or a member of an underrepresented group to receive an opportunity grant?</h3>
 <p>We try to allocate opportunity grants to a diverse set of attendees based on need. Our review process is holistic and considers many different factors, most notably the impact we think attending DjangoCon US will have on the applicant.</p>
 <h3 id="when-will-i-receive-my-opportunity-grant%3F" tabindex="-1">When will I receive my opportunity grant?</h3>
