--- a/public-health/index.html
+++ b/public-health/index.html
@@ -7,12 +7,12 @@
 
   <link rel="canonical" href="https://2028.djangocon.us/public-health/" />
   <meta name="author" content="DjangoCon US" />
-  <meta name="description" content="DjangoCon US 2024's public health policy includes required testing and a mask recommendation.
+  <meta name="description" content="DjangoCon US {{ site.conf_year }}'s public health policy.
 " />
 
   <meta property="og:title" content="Public Health Policy | DjangoCon US 2028" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:description" content="DjangoCon US 2024's public health policy includes required testing and a mask recommendation.
+  <meta property="og:description" content="DjangoCon US {{ site.conf_year }}'s public health policy.
 " />
   <meta property="og:url" content="https://2028.djangocon.us/public-health/" />
   <meta property="og:site_name" content="DjangoCon US" />
@@ -83,7 +83,7 @@
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">Public Health Policy</h1>
         <p class="subheading">
-          DjangoCon US 2024's public health policy includes required testing and a mask recommendation.
+          DjangoCon US 2028's public health policy.
         </p>
       </div>
     </header>
