--- a/schedule/index.html
+++ b/schedule/index.html
@@ -7,12 +7,12 @@
 
   <link rel="canonical" href="https://2028.djangocon.us/schedule/" />
   <meta name="author" content="DjangoCon US" />
-  <meta name="description" content="The schedule for DjangoCon US 2024.
+  <meta name="description" content="The schedule for DjangoCon US {{ site.conf_year }}.
 " />
 
   <meta property="og:title" content="Full Conference Schedule | DjangoCon US 2028" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:description" content="The schedule for DjangoCon US 2024.
+  <meta property="og:description" content="The schedule for DjangoCon US {{ site.conf_year }}.
 " />
   <meta property="og:url" content="https://2028.djangocon.us/schedule/" />
   <meta property="og:site_name" content="DjangoCon US" />
