--- a/speaking/index.html
+++ b/speaking/index.html
@@ -84,7 +84,7 @@
 <div class="pt-0 block-container">
   <div class="wrapper">
     <div class="prose lg:prose-lg">
-      <p>Our Call for Proposals is now closed. Decision notifications will be sent by July 8th, 2024.</p>
+      <p>Our Call for Proposals details for 2028 will be announced soon.</p>
 <h2 id="why-speak-at-djangocon-us%3F" tabindex="-1">Why Speak at DjangoCon US?</h2>
 <ul>
 <li>Presenters receive a <strong>free ticket</strong> to DjangoCon US and up to <strong>$500 in travel cost reimbursement!</strong></li>
@@ -123,7 +123,7 @@
 <li>Format: In-person</li>
 </ul>
 <p>We’re open to all kinds of ideas, especially ones we haven’t thought of! Technical tutorials tend to be more popular, but we welcome all topics! Tutorials can be targeted at any experience level, just be sure to indicate clearly what you expect your students to already know or have experience with in your proposal!</p>
-<p>Still unsure if you should submit? Not only will we cover your DjangoCon ticket, but <em>tutorials are compensated</em>! However, they do not include the price of your travel or lodging. If you need help with these costs, fill out the <a href="https://forms.gle/Pi12J6vFQHq2CSAy5">opportunity grant</a> form by April 29, 2024. Decision notifications will be sent by June 14, 2024.</p>
+<p>Still unsure if you should submit? Not only will we cover your DjangoCon ticket, but <em>tutorials are compensated</em>! However, they do not include the price of your travel or lodging. If you need help with these costs, fill out the opportunity grant form when it becomes available.</p>
 <h4 id="new-expectations-for-tutorials" tabindex="-1">New Expectations for Tutorials</h4>
 <p>In order to streamline the tutorial process, we’re going to offer volunteer staffed office hours for tutorial attendees to help them get their machine set up. Tutorial presenters are not required to participate in these office hours. We will require that all tutorials include a setup guide by October 1st. This guide is what will be followed during the office hours.</p>
 <p>The setup guide should include a step confirming that the setup has been complete. For example, if the tutorial requires a working Django application, having the user create a superuser, run <code>runserver</code>, then log into the Django Administration site would suffice. The goal here is to uncover and resolve setup issues so that the tutorial’s time can be spent on content. A thorough example for a setup guide <a href="https://github.com/tim-schilling/debug-tutorial/#getting-setup">can be found here</a>.</p>
