--- a/speaking/speaker-resources/index.html
+++ b/speaking/speaker-resources/index.html
@@ -7,12 +7,12 @@
 
   <link rel="canonical" href="https://2028.djangocon.us/speaking/speaker-resources/" />
   <meta name="author" content="DjangoCon US" />
-  <meta name="description" content="Resources to support DjangoCon US 2024 speakers
+  <meta name="description" content="Resources to support DjangoCon US {{ site.conf_year }} speakers
 " />
 
   <meta property="og:title" content="Speaker Resources | DjangoCon US 2028" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:description" content="Resources to support DjangoCon US 2024 speakers
+  <meta property="og:description" content="Resources to support DjangoCon US {{ site.conf_year }} speakers
 " />
   <meta property="og:url" content="https://2028.djangocon.us/speaking/speaker-resources/" />
   <meta property="og:site_name" content="DjangoCon US" />
