--- a/tickets/index.html
+++ b/tickets/index.html
@@ -83,7 +83,7 @@
         class="hidden w-full max-w-80 md:block" />
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">DjangoCon US Tickets</h1>
-        <p class="subheading">DjangoCon US 2024 tickets are available at early bird prices through May 31!</p>
+        <p class="subheading">DjangoCon US 2028 ticket information coming soon!</p>
         
       </div>
     </header>
@@ -205,11 +205,8 @@
 <p>If you have an in person ticket and find that you can't attend, please ask about converting to an online ticket.</p>
 <p>Otherwise for cancelling in-person or online main tickets:</p>
 <ul>
-<li>Refunds requested before September 1, 2024, incur a 10% cancellation fee.</li>
-<li>Refunds requested between September 2 and September 9, 2024, incur a 25% cancellation fee.</li>
-<li>Refunds requested between September 10 and September 21, 2024, incur a 50% cancellation fee.</li>
-<li>Requests received after September 21, 2024 at 5:00 pm PDT are not eligible for a refund.</li>
-<li>Tickets may be transferred to someone else at no charge by September 20 for tutorials and September 21 for the conference.</li>
+<li>Refund policy details will be updated for 2028.</li>
+<li>Tickets may be transferred to someone else at no charge. Details coming soon.</li>
 </ul>
 
       </section>
@@ -219,7 +216,7 @@
 <p>PLEASE do not come in person if you feel at all sick of any kind. Even if the conference has already begun, we can help get you connected virtually.</p>
 <p>In-person tickets can be converted to online tickets at ANY TIME. For that refund amount, we will take the cost of your ticket, subtract the value of the online equivalent, and then apply the same discount percentage above.</p>
 <p>For all dates the cutoff is on or before 5:00 PM PDT per the time stamp on DEFNA’s servers.</p>
-<p><strong>We hope to see you in Durham!</strong></p>
+<p><strong>We hope to see you at DjangoCon US 2028!</strong></p>
 
         </section>
       </div>
