--- a/venue/index.html
+++ b/venue/index.html
@@ -7,11 +7,11 @@
 
   <link rel="canonical" href="https://2028.djangocon.us/venue/" />
   <meta name="author" content="DjangoCon US" />
-  <meta name="description" content="DjangoCon US 2024 is being held at the Durham Convention Center in Durham, NC." />
+  <meta name="description" content="DjangoCon US {{ site.conf_year }} venue information." />
 
   <meta property="og:title" content="Welcome to Durham! | DjangoCon US 2028" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:description" content="DjangoCon US 2024 is being held at the Durham Convention Center in Durham, NC." />
+  <meta property="og:description" content="DjangoCon US {{ site.conf_year }} venue information." />
   <meta property="og:url" content="https://2028.djangocon.us/venue/" />
   <meta property="og:site_name" content="DjangoCon US" />
 
@@ -135,7 +135,7 @@
       <section class="space-y-6 text-xl lg:text-2xl">
         <h2 class="mb-4 text-3xl font-bold font-heading lg:text-5xl">Staying at the Durham Marriott City Center</h2>
         <p>
-         The hotel room block is closed for 2024. Please check other lodging options below or attempt to
+         The hotel room block information will be updated. Please check other lodging options below or attempt to
          <a href="https://www.marriott.com/en-us/hotels/rducv-durham-marriott-city-center/overview/">book a room</a> at the normal retail rates.
         </p>
         <ul class="flex flex-wrap gap-2">
