--- a/venueless-welcome-page/index.html
+++ b/venueless-welcome-page/index.html
@@ -76,7 +76,7 @@
     <div class="flex flex-col gap-8 lg:flex-row">
       <section class="self-center w-full pb-4 lg:flex-1">
         <h1 class="mb-4 text-4xl font-extrabold leading-tight lg:text-5xl">
-          Welcome to DjangoCon US 2024 Online
+          Welcome to DjangoCon US 2028 Online
         </h1>
         <br>
         <!-- <p class="mb-4 text-2xl lg:text-3xl">
@@ -89,7 +89,7 @@
             target="_blank"
             class="hover:text-blue reverse-link">Durham Convention Center<br/><strong>Durham, NC</strong></a> -->
             We are so happy to be hosting you online. We will be hosting discussions on
-            <a href="https://djangoconus2024.slack.com">Slack</a> and are looking forward to chatting with
+            <a href="https://djangocon.slack.com">Slack</a> and are looking forward to chatting with
             you there while watching the conference. <br /><br />We have two stages, Junior Ballroom and Grand Ballroom III where you can watch speakers
             while you ask questions in our Slack.
         </p>
@@ -116,7 +116,7 @@
       <div>
         <ul class="space-y-10">
           <li>
-            <h2 class="mb-4 text-xl font-bold leading-relaxed font-heading lg:text-3xl"><a href="https://djangoconus2024.slack.com">Slack</a></h2>
+            <h2 class="mb-4 text-xl font-bold leading-relaxed font-heading lg:text-3xl"><a href="https://djangocon.slack.com">Slack</a></h2>
             <p>This is where we will be chatting. Come ask the speakers questions.
               Here you can also look at job opportunities, find the help desk, announcements updating speaker times, and hang out with us</p>
           </li>
@@ -179,7 +179,7 @@
                   <article class="py-6">
                     <time
                       class="mb-2 tracking-wide text-gray-600 uppercase"
-                      datetime="Mon Feb 23 2026 20:41:02 GMT+0000 (Coordinated Universal Time)">December 6, 2024</time>
+                      datetime="Mon Feb 23 2026 20:46:56 GMT+0000 (Coordinated Universal Time)">December 6, 2024</time>
                     <h2 class="text-xl font-semibold font-heading lg:text-2xl"><a href="/news/hackathon-recap/" class="reverse-link">Hackathon Recap</a></h2>
                   </article>
                 </li>
@@ -190,7 +190,7 @@
                   <article class="py-6">
                     <time
                       class="mb-2 tracking-wide text-gray-600 uppercase"
-                      datetime="Mon Feb 23 2026 20:41:02 GMT+0000 (Coordinated Universal Time)">November 23, 2024</time>
+                      datetime="Mon Feb 23 2026 20:46:56 GMT+0000 (Coordinated Universal Time)">November 23, 2024</time>
                     <h2 class="text-xl font-semibold font-heading lg:text-2xl"><a href="/news/code-of-conduct-transparency-report/" class="reverse-link">Code of Conduct Transparency Report for DjangoCon US 2024</a></h2>
                   </article>
                 </li>
@@ -201,7 +201,7 @@
                   <article class="py-6">
                     <time
                       class="mb-2 tracking-wide text-gray-600 uppercase"
-                      datetime="Mon Feb 23 2026 20:41:02 GMT+0000 (Coordinated Universal Time)">October 7, 2024</time>
+                      datetime="Mon Feb 23 2026 20:46:56 GMT+0000 (Coordinated Universal Time)">October 7, 2024</time>
                     <h2 class="text-xl font-semibold font-heading lg:text-2xl"><a href="/news/conference-wrap-up/" class="reverse-link">2024 Conference Wrap Up</a></h2>
                   </article>
                 </li>
