--- a/invitation/index.html
+++ b/invitation/index.html
@@ -7,12 +7,12 @@
 
   <link rel="canonical" href="https://2028.djangocon.us/invitation/" />
   <meta name="author" content="DjangoCon US" />
-  <meta name="description" content="Request your visa invitation letter for DjangoCon US 2024 here.
+  <meta name="description" content="Request your visa invitation letter for DjangoCon US {{ site.conf_year }} here.
 " />
 
   <meta property="og:title" content="Visa Invitation Letter | DjangoCon US 2028" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:description" content="Request your visa invitation letter for DjangoCon US 2024 here.
+  <meta property="og:description" content="Request your visa invitation letter for DjangoCon US {{ site.conf_year }} here.
 " />
   <meta property="og:url" content="https://2028.djangocon.us/invitation/" />
   <meta property="og:site_name" content="DjangoCon US" />
@@ -128,7 +128,7 @@
     <div>
       <div id="loader" hidden></div>
       <p id="inProgressMsg" hidden class="max-w-2xl p-4 mx-auto text-lg bg-white border-4 rounded lg:p-12 text-medium lg:text-xl border-green">
-        Thank you for your interest in DjangoCon US 2024! We're generating your invitation letter.
+        Thank you for your interest in DjangoCon US! We're generating your invitation letter.
       </p>
       <p id="readyMsg" hidden class="max-w-2xl p-4 mx-auto text-lg bg-white border-4 rounded lg:p-12 text-medium lg:text-xl border-green">Your invitation letter has been sent to the DjangoCon US organizers for review. Once they approve it, they will email it to you. Thanks for your interest!</p>
     </div>
