--- a/venueless-help-page/index.html
+++ b/venueless-help-page/index.html
@@ -81,7 +81,7 @@
       <div class="flex-1 max-w-screen-lg">
         <h1 class="mb-8 pageheading">Help Page</h1>
         <p class="subheading">
-          Need Help? This is the place! Or, visit our <a href="https://djangoconus2024.slack.com">Slack</a>.
+          Need Help? This is the place! Or, visit our <a href="https://djangocon.slack.com">Slack</a>.
         </p>
       </div>
     </header>
@@ -92,11 +92,11 @@
     <div class="grid gap-4 lg:grid-cols-4">
         <div class="p-4 bg-gray-100">
           <span class="text-xl font-bold">General Venueless Questions?</span>
-          <p class="">Come Visit Our Help Desk in <a href="https://djangoconus2024.slack.com">Slack </a></p>
+          <p class="">Come Visit Our Help Desk in <a href="https://djangocon.slack.com">Slack </a></p>
         </div>
         <div class="p-4 bg-gray-200">
           <span class="text-xl font-bold">Technical Issues?</span>
-          <p>Come Visit Our Help Desk in <a href="https://djangoconus2024.slack.com">Slack </a></p>
+          <p>Come Visit Our Help Desk in <a href="https://djangocon.slack.com">Slack </a></p>
         </div>
         <div class="p-4 bg-gray-200">
           <span class="text-xl font-bold">Problems Accessing Slack?</span>
